# ai-assistant

./: .editorconfig  .gitignore  README.md  justfile  pyproject.toml
docs/: walkthrough.md
examples/: CompanyPolicy.txt
src/assistant/: __init__.py  asgi.py  embeddings.py  llm.py  rag.py  routes.py  storage.py  utils.py
tests/requests/: api_v1_documents.http  raw_document.json
